<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inmobiliaria</string>
    <string name="action_subir">Sincronizar</string>
    <string name="action_anadir">Añadir Inmueble</string>
    <string name="title_activity_secundaria">Detalle Inmueble</string>
    <string name="action_borrar">Borrar Inmueble</string>
    <string name="action_modificar">Editar Inmueble</string>
    <string name="direccion">Dirección</string>
    <string name="numeroCalle">Número del inmueble</string>
    <string name="tipo">Tipo</string>
    <string name="descripcion">Descripción</string>
    <string name="btnInsertar">Insertar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="tv_direccion">Dirección:</string>
    <string name="tv_num">Número:</string>
    <string name="tv_precio">Precio:</string>
    <string name="tv_tipo">Tipo:</string>
    <string name="tv_descripcion">Descripción:</string>
    <string name="sincronizados">Los inmuebles están sincronizados</string>
    <string name="sinc_finalizada">Sincronización finalizada</string>
    <string name="error_sinc">Error al sincronizar</string>
</resources>
